--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "concurrently": "^9.1.2"
   },
   "scripts": {
+    "setup:server": "cd backend && npm install",
+    "setup:client": "cd frontend && npm install",
     "start": "concurrently \"npm start --prefix frontend\" \"cd backend && node src/index.js\""
   }
 }
